feat: improve Docker setup and Terraform remote state configuration
Refactored Dockerfile.dev to use multi-stage builds for optimized image sizes
Introduced a non-root user in Dockerfile.dev to enhance security
Changed exposed port from 5000 to 5001 and updated healthchecks accordingly
Removed unnecessary .terraform/environment and Dockerfile.local files
Upgraded package versions in Pipfile.lock for idna sqlalchemy and platformdirs
Added a /health endpoint in app/routes.py to monitor service health
Updated swagger.yaml to document the new health check endpoint
Configured Terraform to utilize remote state for managing RDS secrets in db.tf and main.tf
Removed the rds_instance_secrets_name variable from vars.tf to streamline configuration
